# simcoe

./: .gitattributes  .gitignore  .gitmodules  README.md  config.toml  defaults.toml  editor.toml  imgui.ini  meson.build  meson_options.txt
.cache/clangd/index/: engine.cpp.90364BD805FD4364.idx  engine.h.813E91B319D2D3E3.idx  main.cpp.B9B0236DCCE6D103.idx  main.cpp.C6902B50088FE0D4.idx  render.cpp.4870D722F6736E8D.idx  render.h.0C58BE49A9CBDCF5.idx  system.cpp.A846A55169F056BC.idx  system.h.00F6871703A164BB.idx
client/src/: main.cpp
data/config/: MicrosoftGame.Config  config.toml  imgui.ini  layout.xml
data/config/meson/: base.ini  cl-windows.ini  clang-windows.ini  clangcl-windows.ini
data/models/: alien.model  bullet.model  cross.model  default.model  egg-large.model  egg-medium.model  egg-small.model  grid.model  plane.model  ship.model
data/scripts/: compile-hlsl.py  copy-asset.py  generate-effects.py  notes.py
data/shaders/: blit.hlsl  game.hlsl  hud.hlsl  mipmap.hlsl  object.hlsl  quad.hlsl
editor/include/ecs/: service.h
editor/include/editor/: render.h  service.h
editor/include/editor/debug/: debug.h  depot.h  gui.h  logging.h  service.h
editor/include/editor/game/: game.h  input.h  level.h  object.h  state.h  swarm.h
editor/include/editor/graph/: assets.h  game.h  gui.h  mesh.h  mipmap.h  post.h  scene.h
editor/include/editor/render/: graph.h  render.h
editor/include/editor/ui/: service.h  ui.h
editor/include/game/: entity.h  game.h  info.h  level.h  service.h  tick.h  world.h
editor/include/game/ecs/: objects.h  storage.h  typeinfo.h  world.h
editor/include/game/physics/: physics.h
editor/include/game/render/: hud.h  scene.h
editor/include/game2/: level.h  object.h  physics.h  world.h
editor/include/game2/components/: camera.h  collider.h  mesh.h  scene.h
editor/include/imfiles/: imfilebrowser.h
editor/include/imgui/: imconfig.h  imgui_internal.h
editor/include/swarm/: input.h  levels.h  objects.h  swarm.h
editor/src/: main.cpp
editor/src/ecs/: service.cpp
editor/src/editor/: render.cpp  service.cpp
editor/src/editor/debug/: debug.cpp  depot.cpp  engine.cpp  gdk.cpp  gui.cpp  logging.cpp  ryzen.cpp  threads.cpp
editor/src/editor/game/: game.cpp  gltf.cpp  input.cpp  level.cpp  obj.cpp  swarm.cpp
editor/src/editor/graph/: assets.cpp  game.cpp  gui.cpp  mipmap.cpp  post.cpp  scene.cpp
editor/src/editor/render/: graph.cpp  render.cpp
editor/src/editor/ui/: ui.cpp
editor/src/game/: entity.cpp  game.cpp  info.cpp  level.cpp  service.cpp  world.cpp
editor/src/game/ecs/: storage.cpp  typeinfo.cpp  world.cpp
editor/src/game/render/: hud.cpp  scene.cpp
editor/src/game2/: physics.cpp
editor/src/game2/components/: collider.cpp  scene.cpp
editor/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
editor/src/imgui/backends/: imgui_impl_dx12.cpp  imgui_impl_win32.cpp
editor/src/imgui/misc/: imgui_freetype.cpp
editor/src/implot/: implot.cpp  implot_demo.cpp  implot_items.cpp
editor/src/swarm/: input.cpp  objects.cpp
engine/include/engine/: engine.h
engine/include/engine/assets/: assets.h  font.h  image.h
engine/include/engine/audio/: audio.h  service.h
engine/include/engine/config/: builder.h  config.h  schema.h  service.h  source.h  system.h
engine/include/engine/core/: array.h  bimap.h  bitmap.h  compiler.h  error.h  filesystem.h  macros.h  mt.h  panic.h  range.h  slotmap.h  strings.h  text.h  unique.h  (+3 more)
engine/src/: engine.cpp
engine/src/assets/: assets.cpp  font.cpp
engine/src/audio/: audio.cpp  service.cpp  vorbis.cpp
engine/src/config/: config.cpp  schema.cpp  service.cpp  source.cpp  system.cpp  toml.cpp
engine/src/core/: bitmap.cpp  error.cpp  panic.cpp  strings.cpp  units.cpp  utf8.cpp
engine/src/debug/: service.cpp
engine/src/depot/: font.cpp  image.cpp  service.cpp  vfs.cpp
engine/src/input/: common.h  gameinput-device.cpp  gameinput-service.cpp  input.cpp  service.cpp  win32-device.cpp  xinput-device.cpp
engine/src/log/: message.cpp  service.cpp  sinks.cpp
engine/src/memory/: bitmap.cpp
engine/src/os/: system.cpp  timer.cpp
engine/src/physics/: world.cpp
engine/src/render/: assets.cpp  graph.cpp  render.cpp  service.cpp  vendor.cpp
engine/src/rhi/: render.cpp  service.cpp  vendor.cpp
engine/src/service/: config.cpp  debug.cpp  freetype.cpp  gdk.cpp  logging.cpp  platform.cpp  service.cpp
engine/src/system/: system.cpp
engine/src/tasks/: exclude.cpp  task.cpp
engine/src/threads/: exclude.cpp  mutex.cpp  name.cpp  queue.cpp  scheduler.cpp  service.cpp  thread.cpp
engine/src/util/: retry.cpp  strings.cpp  time.cpp  util.cpp
old/: game.cpp  game.h  mipmap.h
old/argo/: meson.build
old/fastgltf/: meson.build
old/fastgltf/include/fastgltf/: util.hpp
old/game-old/include/: game.h
old/game-old/src/: level.cpp
old/simdjson/: meson.build
old/swarm/include/: input.h  levels.h  swarm.h
old/swarm/src/: input.cpp  objects.cpp
subprojects/: flecs.wrap  gameruntime.wrap  ogg.wrap  ryzenmonitor.wrap  win32.wrap
subprojects/atomic-queue/: meson.build
subprojects/directx/: meson.build
subprojects/fastgltf/src/: base64.cpp  fastgltf.cpp
subprojects/gameinput/: meson.build
subprojects/gameruntime/: meson.build
subprojects/gameruntime/include/: XSystem.h
subprojects/gdk/: meson.build
subprojects/packagefiles/fmt/: noprint.patch
subprojects/packagefiles/icu/: meson.build  meson_options.txt
subprojects/packagefiles/libpng/: meson.build
subprojects/packagefiles/ryzenmonitor/: meson.build
subprojects/packagefiles/ryzenmonitor/include/ryzenmonitor/: ICPUEx.h  IPlatform.h
subprojects/packagefiles/ryzenmonitor/lib/: Device.lib  Platform.lib
subprojects/packagefiles/vorbis/: meson.build
subprojects/packagefiles/win32/: meson.build
subprojects/ryzen/: meson.build
subprojects/ryzen/include/ryzen/: IBIOSEx.h
subprojects/stb/: meson.build
subprojects/tinyobj/: meson.build
subprojects/tinyobj/src/: loader.cpp
subprojects/win32/: meson.build
subprojects/xinput/: meson.build
tools/bundle/src/: main.cpp
(+100 files in other folders)
