option('debug-render',
    description : 'enable render debug layers',
    type : 'feature',
    value : 'auto'
)

option('gui-app',
    description : 'enable gui app',
    type : 'feature',
    value : 'auto'
)

option('windows-store',
    description : 'package for windows store',
    type : 'feature',
    value : 'auto'
)

option('services',
    description : 'optional editor services to enable',
    choices : [ 'ryzenmonitor', 'gdk' ],
    type : 'array',
    value : [ 'ryzenmonitor', 'gdk' ]
)
