option('debug-render',
    description : 'enable d3d12 render debug layer',
    type : 'feature',
    value : 'auto'
)

option('debug-threads',
    description : 'enable intrusive thread debugging',
    type : 'feature',
    value : 'auto'
)

option('debug-audio',
    description : 'enable xaudio2 debugging',
    type : 'feature',
    value : 'auto'
)

option('gui-app',
    description : 'link as a gui app on windows',
    type : 'feature',
    value : 'auto'
)

option('package-msstore',
    description : 'package for windows store',
    type : 'feature',
    value : 'auto'
)

option('package-steam',
    description : 'package for steam',
    type : 'feature',
    value : 'auto'
)

option('gameruntime',
    description : 'enable windows gameruntime integration',
    type : 'feature',
    value : 'auto'
)

option('ryzenmonitor',
    description : 'enable ryzenmonitor integration',
    type : 'feature',
    value : 'auto'
)
